# web

./: .gitignore  .vercelignore  API功能测试指南.md  frontend_architecture_mermaid.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vercel.json  前端后端对接分析报告.md
backend/: .gitignore  README.md  env.example  example_usage.py  pyproject.toml  test_knowledge_base.py  test_study_search.py
backend/app/: main.py
backend/apps/: __init__.py  main.py
backend/apps/api/: __init__.py
backend/apps/schemas/: __init__.py  common.py  communication.py  conversations.py  forum.py  friends.py  matching.py  mentor.py  mentorship.py  message.py  orders.py  reviews.py  service.py  session.py  skill.py  skills.py  social.py  student.py  token.py  transaction.py  uploaded_files.py  user.py  user_availability.py  user_credit_logs.py  user_learning_needs.py  user_reputation_stats.py  user_skills.py  user_unavailable_periods.py  user_wallets.py  utility.py
backend/docs/: API_RESPONSE_FORMAT.md  DB_MIGRATION_SUPABASE_SOP.md  MINIO_SETUP.md  openapi.json  techplan.md
backend/docs/benchmark/: BENCHMARK_PLAN.md  EXPERIMENT_MATRIX.md  EXPERIMENT_PROTOCOL.md  README.md  RESULTS_REPORT_TEMPLATE.md  TEMPLATES.md
backend/libs/: testChroma.py
backend/libs/config/: __init__.py  ai_config.py  database_config.py  langsmith_config.py  minio_config.py  security_config.py  settings.py
backend/libs/database/: adapters.py  connection.py
backend/scripts/: knowledge_base_manager.py
backend/supabase/: README.md  config.toml  schema.sql  schema_snapshot.json
(+240 files in other folders)
