[tool.poetry]
name = "backend"
version = "0.1.0"
description = "启航引路人 - 留学双边信息平台后端API"
authors = ["aokimi <aokimi0@qq.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.0"
uvicorn = {extras = ["standard"], version = "0.30.0"}
pydantic = {extras = ["email"], version = "^2.7.0"}
openai = "^1.50.0"
langchain-core = "^0.3.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langgraph = "^0.2.51"
sqlalchemy = "^2.0.0"
asyncpg = "0.29.0"
python-dotenv = "1.0.1"
supabase = "2.17.0"
python-jose = {extras = ["cryptography"], version = "3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
requests = "2.32.4"
httpx = "0.27.0"
python-multipart = "0.0.19"
aiofiles = "24.1.0"
pydantic-settings = "^2.0.0"
typing-extensions = "^4.8.0"
click = "^7.0"
pyyaml = "^6.0"
anyio = "^4.0.0"
tenacity = "^8.1.0"
redis = "^5.0.0"
pymilvus = "^2.6.1"
motor = "^3.7.1"
elasticsearch = "^9.1.1"
tavily-python = "^0.5.0"
uuid6 = "^2025.0.1"
minio = "^7.2.0"
chromadb-client = "1.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"


[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
